--- a/src/style/css/index.css
+++ b/src/style/css/index.css
@@ -16,7 +16,7 @@ main .container-fluid{
     box-shadow: 0px 2px 15px rgb(165, 165, 165);
     background: linear-gradient(to right, #AFEFE3 , white 90%);
 }
-main .btn{
+.index .container .btn{
     background-color: #E65924 !important;
     border-color: #E65924 !important;
     margin-bottom: 5rem;
