--- a/src/style/css/homePage.css
+++ b/src/style/css/homePage.css
@@ -1,141 +1,141 @@
-main h1{
+.homePage main h1{
     font-weight: 950;
     padding-top: 5rem;
     font-family: 'Nunito', sans-serif;
 }
-main section h4{
+.homePage main section h4{
     font-weight: bold;
     font-style: italic;
     color: #11999E;
     font-family: 'Nunito Sans', sans-serif;
 }
-main p{
+.homePage main p{
     font-family: 'Nunito Sans', sans-serif;
 }
-main .container-fluid{
+.homePage main .container-fluid{
     box-shadow: 0px 2px 15px rgb(165, 165, 165);
     background: linear-gradient(to right, #AFEFE3 , white 90%);
 }
-.index .container .btn{
+.homePage main .btn{
     background-color: #E65924 !important;
     border-color: #E65924 !important;
     margin-bottom: 5rem;
 }
-main .btn:hover{
+.homePage main .btn:hover{
     background-color: #11999E !important;
     border-color: #11999E !important;
     box-shadow: 2px 3px 5px rgb(39, 39, 39);
 }
-.container-fluid .container{
+.homePage .container-fluid .container{
     display: flex;
 }
-main section{
+.homePage main section{
     float: left;
 }
-main aside img{
+.homePage main aside img{
     padding-top: 10px;
     float: right;
     width: 85%;
 }
-.fitur{
+.homePage .fitur{
     margin-top: 50px;
     background: linear-gradient(white, #addfd5);
     
 }
-.fitur .container h2{
+.homePage .fitur .container h2{
     padding-top: 40px;
     text-align: center;
     font-weight: bold;
     font-family: 'Nunito', sans-serif;
 }
-.fitur .fitur-atas{
+.homePage .fitur .fitur-atas{
     padding-top: 30px;
     display: flex;
 }
-.fitur .fitur-bawah{
+.homePage .fitur .fitur-bawah{
     padding-bottom: 100px;
     display: flex;
 }
-main .fitur .content h4{
+.homePage main .fitur .content h4{
     font-family: 'Nunito', sans-serif;
 }
-.fitur1{
+.homePage .fitur1{
     width: 50%;
     display: flex;
 }
-.fitur2{
+.homePage .fitur2{
     width: 50%;
     display: flex;
 }
-.fitur3{
+.homePage .fitur3{
     width: 50%;
     display: flex;
 }
-.fitur4{
+.homePage .fitur4{
     width: 50%;
     display: flex;
 }
-.fitur img{
+.homePage .fitur img{
     height: 100px;
 }
-.content{
+.homePage .content{
     padding: 10px;
 }
 @media only screen and (max-width: 991px){
-    main aside img{
+    .homePage main aside img{
         display: none;
     }
 }
 @media only screen and (max-width: 576px){
-    .fitur .container h2{
+    .homePage .fitur .container h2{
         padding-top: 0;
     }
-    main aside img{
+    .homePage main aside img{
         display: none;
     }
-    main section{
+    .homePage main section{
         float: none;
     }
     main .btn{
         margin-bottom: 1rem;
     }
-    .fitur .fitur-atas{
+    .homePage .fitur .fitur-atas{
         padding-top: 20px;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    .fitur .fitur-bawah{
+    .homePage .fitur .fitur-bawah{
         padding-bottom: 100px;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    .fitur1{
+    .homePage .fitur1{
         width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    .fitur2{
+    .homePage .fitur2{
         width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    .fitur3{
+    .homePage .fitur3{
         width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    .fitur4{
+    .homePage .fitur4{
         width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    .content{
+    .homePage .content{
         display: flex;
         flex-direction: column;
         align-items: center;
