--- a/src/style/css/pilihMakanan.css
+++ b/src/style/css/pilihMakanan.css
@@ -19,9 +19,11 @@
     font-weight: lighter;
 }
 .pilihMakanan #search{
+    margin-right: 20px;
     border-color: #11999E !important;
 }
 .pilihMakanan #submit{
+    margin: 0;
     color: white;
     background-color: gray !important;
     border-color: gray !important;
